--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-toastify": "^4.0.2",
     "redux": "^3.7.2",
     "url-parse": "^1.4.0",
-    "vue": "^2.5.13"
+    "vue": "^2.5.13",
+    "webpack-chrome-extension-reloader": "^0.8.3"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
