--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.8",
   "description": "translate and remember",
   "scripts": {
-    "dev": "node_modules/.bin/webpack --progress --config build/webpack.dev.js",
+    "dev": "node_modules/.bin/webpack-dashboard -- node_modules/.bin/webpack --config build/webpack.dev.js",
     "build": "rm -rf ./dist && node_modules/.bin/webpack --config build/webpack.production.js"
   },
   "keywords": [
@@ -22,50 +22,52 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "lodash-es": "^4.17.7",
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
+    "lodash-es": "^4.17.11",
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
     "react-redux": "^5.0.7",
-    "react-toastify": "^4.0.2",
+    "react-toastify": "^4.3.1",
     "redux": "^3.7.2",
-    "url-parse": "^1.4.0",
-    "vue": "^2.5.13",
+    "url-parse": "^1.4.3",
+    "vue": "^2.5.17",
     "webpack-chrome-extension-reloader": "^0.8.3"
   },
   "devDependencies": {
-    "babel-core": "^6.26.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-proposal-class-properties": "^7.0.0",
+    "@babel/plugin-proposal-decorators": "^7.0.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.0.0",
     "babel-eslint": "^8.2.2",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.3",
-    "babel-plugin-transform-class-properties": "^6.24.1",
-    "babel-plugin-transform-decorators": "^6.24.1",
+    "babel-loader": "^8.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-vue-jsx": "^3.5.1",
-    "babel-preset-env": "^1.6.1",
-    "babel-preset-react": "^6.24.1",
-    "copy-webpack-plugin": "^4.5.0",
+    "copy-webpack-plugin": "^4.5.2",
     "css-loader": "^0.28.10",
     "eslint": "^4.18.1",
     "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^2.0.0",
+    "eslint-loader": "^2.1.0",
     "eslint-plugin-html": "^4.0.2",
-    "eslint-plugin-import": "^2.9.0",
+    "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-node": "^6.0.1",
     "eslint-plugin-promise": "^3.6.0",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.11.1",
     "eslint-plugin-standard": "^3.0.1",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "file-loader": "^1.1.11",
-    "html-webpack-plugin": "^3.0.4",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "url-loader": "^1.0.1",
     "vue-loader": "^14.1.1",
-    "vue-template-compiler": "^2.5.13",
-    "webpack": "^4.0.0-beta.3",
-    "webpack-cli": "^2.0.10",
-    "webpack-merge": "^4.1.2"
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.19.0",
+    "webpack-cli": "^3.1.0",
+    "webpack-dashboard": "^2.0.0",
+    "webpack-merge": "^4.1.4"
   }
 }
