--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.1.8",
   "description": "translate and remember",
   "scripts": {
-    "dev": "node_modules/.bin/webpack-dashboard -- node_modules/.bin/webpack --config build/webpack.dev.js",
-    "build": "rm -rf ./dist && node_modules/.bin/webpack --config build/webpack.production.js"
+    "dev": "node_modules/.bin/webpack --config build/development.js",
+    "build": "rm -rf ./dist && node_modules/.bin/webpack --config build/production.js"
   },
   "keywords": [
     "translate",
@@ -62,6 +62,11 @@
     "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
+    "tslint": "^5.11.0",
+    "tslint-config-prettier": "^1.15.0",
+    "tslint-config-standard": "^8.0.1",
+    "tslint-loader": "^3.6.0",
+    "typescript": "^3.0.3",
     "url-loader": "^1.0.1",
     "vue-loader": "^14.1.1",
     "vue-template-compiler": "^2.5.17",
